Update run.conf.md